formatted and styled leaderboard. adder footer

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -21,8 +21,9 @@
             <li>Fiber:</li>
           </ul>
         </div>
-        <div id="overlay">
-          <h2 class="text-center"> Recipe of the Day! </h2>
+        <div class="text-center" id="overlay">
+          <h2> Recipe of the Day! </h2>
+          <p>Populate with image and description of the recipe.</p>
           <!--<ul ui-sref="recipes.view({recipeId: recipe._id})">
             <li>
               <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
@@ -31,7 +32,6 @@
               <p class="list-group-item-text" ng-bind="recipe.content"></p> 
             </li>
           </ul>-->
-          <img id="featuredpic" src="modules/core/client/img/brand/bananasfoster.jpg"/>
           
         </div>
         <div id="overlay-right">
@@ -96,7 +96,7 @@
              </p>
       </div>
     </div>
-    
+
       <footer class="modal-footer modal-footer-center" id="style">
         <a ui-sref="contact" class="footer">Contact Us</a>
         <a ui-sref="about" class="footer">About</a>
