--- a/modules/leaderboards/client/views/list-leaderboards.client.view.html
+++ b/modules/leaderboards/client/views/list-leaderboards.client.view.html
@@ -1,14 +1,17 @@
 <section ng-controller="LeaderboardsController" ng-init="find()">
-  <div class="page-header text-center">
-    <h1>Leaderboards</h1>
+  <div class="page-header col-md-10 col-md-offset-1 text-center" id="recipeheader">
+    <h1>Leaderboard</h1>
   </div>
-  <div class="container">
+  <div class="container" id="style">
     <div class="row">
-      <h1>"Best" Recipes</h1>
+      <div class="col-md-4 col-md-offset-1 text-center">
+        <h2>The Top Recipes</h2>
+      </div>
     </div>
+
     <div class="row">
-      <div class="col-md-6">
-        <div class="tableWrapper">
+      <div class="col-md-5 col-md-offset-1">
+        <div class="tableWrapper panel panel-body">
           <table class="table table-striped table-hover">
             <tr>
               <th>Recipe Name</th>
@@ -21,27 +24,26 @@
               <td>{{recipe.created_at | date:'mediumDate'}}</td>
             </tr>
           </table>
-        </div>
-        
-        </div>
+        </div>  
+      </div>
 
       <div class="col-md-5">
-          <div class="jumbotron">
-            <h2>Recipe Information</h2>
-            <h4>{{detailedInfo.title}}</h4>
-            <table class="table table-hover">
-              <tr>
-                <th>Item</th>
-                <th>Quantity</th>
-                <th>Unit</th>
-              </tr>
-              <tr>
-                <td>{{detailedInfo.original_ingredients.item}}</td>
-                <td>{{detailedInfo.original_ingredients.quantity}}</td>
-                <td>{{detailedInfo.original_ingredients.unit}}</td>
-              </tr>
-            </table>
-          </div>
+        <div class="panel panel-body">
+          <h2>Recipe Information</h2>
+          <h4>{{detailedInfo.title}}</h4>
+          <table class="table table-hover">
+            <tr>
+              <th>Item</th>
+              <th>Quantity</th>
+              <th>Unit</th>
+            </tr>
+            <tr>
+              <td>{{detailedInfo.original_ingredients.item}}</td>
+              <td>{{detailedInfo.original_ingredients.quantity}}</td>
+              <td>{{detailedInfo.original_ingredients.unit}}</td>
+            </tr>
+          </table>
+        </div>
       </div>     
     </div>
   </div>
@@ -61,4 +63,11 @@
     No leaderboards yet, why don't you <a ui-sref="leaderboards.create">create one</a>?
   </div>
 -->
+
+  <footer class="modal-footer modal-footer-center" id="style">
+    <a ui-sref="contact" class="footer">Contact Us</a>
+    <a ui-sref="about" class="footer">About</a>
+    <a ui-sref="mission" class="footer">Our Mission</a>
+  </footer>
+  
 </section>
