--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -92,8 +92,8 @@
       </div>
       <textarea name="instructions" ng-model="instructions" id="instructions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
     </div>
-    <div class="form-group">
-      <input type="submit" class="btn btn-default">
+    <div class="">
+      <input value="Submit Recipe!" type="submit" class="btn btn-default">
     </div>
     <div ng-show="error" class="text-danger">
       <strong ng-bind="error"></strong>
