--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -61,11 +61,41 @@
             <input name="item" ng-model="ingredients.item" placeholder="ingredient" class="form-control" type="text">
           </div>
           <span class="input-group-btn">
-            <button type="button" class="btn btn-secondary" ng-click="addIngredientLine()">
+            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
+
           </span>
         </div>
+
+        <!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Select Your Intended Ingredient</h4>
+      </div>
+      <div class="modal-body">
+       <table class="table table-striped table-hover">
+        <tr ng-repeat="option in usdaList.item" ng-click="confirmIngredient($index);">
+          <td>{{option.name}}</td>
+        </tr>
+      </table>
+
+      </div>
+      <div class="modal-footer">
+        <span>Your Ingredient Is: {{confirmed.name}}</span>
+        <button type="button" class="btn btn-default" data-dismiss="modal" on-click="findFoods();">Okay!</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+        
+            
 
         <div class="input-group" id="ingredientsAdded" ng-repeat="ingredient in original_ingredients">
 
@@ -99,4 +129,9 @@
       <strong ng-bind="error"></strong>
     </div>
   </form>
+
+<button type="button" class="btn btn-secondary" on-click="addIngredientLine();">
+  <span class="glyphicon glyphicon-plus"></span>
+</button>
 </section>
+
