--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -37,7 +37,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="ingredient in recipe.original_ingredients">
+      <tr ng-repeat="ingredient in recipe.orig_ing">
         <td>{{ingredient.quantity}}</td>
         <td>{{ingredient.unit}}</td>
         <td>{{ingredient.item}}</td>
