linking healthify page

--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -22,7 +22,7 @@
       <a class="btn btn-primary" ng-click="remove();">
         <i class="glyphicon glyphicon-trash"></i>
       </a>
-      <a class="btn btn-info" ng-click="">
+      <a class="btn btn-info" ui-sref="recipes.healthify({recipeID: recipe._id})">
         <i class="glyphicon glyphicon-heart"> Healthify</i>
       </a>
     </div>
