editing home page, now trying to get smaller views to work

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -21,7 +21,7 @@
         <a ng-switch-default ui-sref="{{item.state}}" ng-bind="item.title"></a>
       </li>
     </ul>
-    <ul class="nav navbar-nav navbar-center"> <a ui-sref="home" class="navbar-brand" id="title">What U Eatin?</a>
+    <ul class="nav navbar-nav navbar-center"> <a ui-sref="home" class="navbar-brand" id="titl">What U Eatin?</a>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-hide="authentication.user">
       <li ui-sref-active="active">
