--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -35,3 +35,193 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+
+.row1style {
+  
+}
+
+.style {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+}
+
+#style2 {
+  background-color: #F4F7D9;
+}
+
+#style {
+  background-color: #F4F7D9;
+}
+
+#logo {
+  border: 1px solid #fff;
+  border-radius: 75px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
+}
+
+#center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#homeheader {
+  padding-bottom: 40px;
+  padding-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 30px;
+}
+
+#veggies {
+  border:1px solid #fff;
+  border-radius: 10px;
+  width: 100%;
+  height: 550px;
+  position: relative;
+}
+
+
+#featuredpic {
+  opacity: 1; 
+  margin-right: auto;
+  margin-left: auto; 
+}
+
+#overlay {
+  /*position: absolute;
+  top: 40px; 
+  left: 24%;*/
+  width: 52%;
+  height: 85%;
+  background-color: #F4F7D9;
+  opacity: 0.85;
+  border: 1px solid #fff;
+  border-radius: 25px;
+}
+
+#overlay-left {
+  /*
+  position: absolute;
+  top: 60px; 
+  left: 3%; */
+  width: 20%;
+  height: 80%;
+  background-color: #F4F7D9;
+  opacity: 0.85;
+  border: 1px solid #fff;
+  border-radius: 25px;
+}
+.topper {
+  padding-top: 25px;
+}
+
+#overlay-right {
+  /*
+  position: absolute;
+  top: 60px; 
+  left: 77%; */
+  width: 20%;
+  height: 80%;
+  background-color: #F4F7D9;
+  opacity: 0.85;
+  border: 1px solid #fff;
+  border-radius: 25px;
+}
+
+#title {
+  position: absolute;
+  text-align: center;
+  top: 2.5px; 
+  left: 40%;
+  width: 22%;
+  height: 50px;
+  font-size: 35px;
+}
+
+#table-border {
+  border: 1px solid #6c6e58;
+}
+
+#paragraph {
+  font-size: 16px;
+}
+
+#searchBar {
+  margin: 15px 10px;
+}
+
+.picture-bg {
+  background-image: url("modules/core/client/img/brand/veggies.jpg");
+}
+
+.myheaders {
+  font-size: 17px;
+}
+
+#codeheader {
+  width: 60px;
+  padding-left: 4px;
+  text-align: left;
+}
+#nameheader {
+  padding-left: 6px;
+  text-align: left;
+}
+
+#newListing {
+  margin: 5px 0px 0px 5px; 
+}
+
+#details {
+  font-size: 15px;
+}
+
+#details-info {
+  margin-left: 25px;
+}
+
+#picture-thumbnail {
+ max-width: 350px;
+ max-height: 350px; 
+}
+
+#image-border {
+  width: 75%;
+  height: 75%;
+  border: 1px solid #f5f5f5;
+}
+
+#ing {
+  vertical-align: center; 
+  border-bottom: 2px solid #000;
+  border-right: 2px solid #000;
+  margin-right: 20px;
+  text-align: right;
+}
+
+#padbot {
+  padding-bottom: 40px;
+  padding-top: -20px;
+  margin-top: -15px;
+
+}
+
+#recipeheader {
+  border-bottom: 2px solid #000;
+}
+
+#bottomborder {
+  height: 100%;
+  width: 100%;
+}
+
+#buffer1 {
+}
+
+#buffer2 {
+  margin-left: 10px;
+}
+
