smaller views working, styling home page

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,52 +8,59 @@
 
 <body>
   
-    <div class="row topper">
+    <div class="row topper" id="overlay">
       <div class="">
         <!--<img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>-->
-        <div class="col-md-2 col-md-offset-1" id="overlay-left">
-          <h3 class="text-center"> Pre-healthification... </h2>
-          <p class="text-center"> Unhealthy ingredients: </p>
-          <ul>
-            <li>Ingredient 1</li>
-            <li>Ingredient 2</li>
-          </ul>
-          <h4 class="text-center">Nutritional Information </h4>
-          <ul>
-            <li>Carbohydrates:</li>
-            <li>Saturated Fat:</li>
-            <li>Unsaturated Fat:</li>
-            <li>Protein:</li>
-            <li>Sugar:</li>
-            <li>Sodium:</li>
-            <li>Fiber:</li>
-          </ul>
+        <div class="col-md-3">
+          <div id="overlay-two">
+            <h3 class="text-center"> Pre-healthification... </h2>
+            <p class="text-center"> Unhealthy ingredients: </p>
+            <ul>
+              <li>Ingredient 1</li>
+              <li>Ingredient 2</li>
+            </ul>
+            <h4 class="text-center">Nutritional Information </h4>
+            <ul>
+              <li>Carbohydrates:</li>
+              <li>Saturated Fat:</li>
+              <li>Unsaturated Fat:</li>
+              <li>Protein:</li>
+              <li>Sugar:</li>
+              <li>Sodium:</li>
+              <li>Fiber:</li>
+            </ul>
+          </div>
         </div>
-        <div class="text-center col-md-6" id="overlay">
-          <h2> Recipe of the Day! </h2>
-          <p>Populate with image and description of the recipe.</p>
+        <div class="text-center col-md-6">
+          <div id="overlay-two">
+            <h2> Recipe of the Day! </h2>
+            <p>Populate with image and description of the recipe.</p>
+          </div>
         </div>
-        <div class="col-md-2" id="overlay-right">
-          <h3 class="text-center"> Post-healthification! </h2>
-          <p class="text-center"> healthy stuff </p>
-          <ul>
-            <li>Ingredient 1</li>
-            <li>Ingredient 2</li>
-          </ul>
-          <h4 class="text-center">Nutritional Information </h4>
-          <ul>
-            <li>Carbohydrates:</li>
-            <li>Saturated Fat:</li>
-            <li>Unsaturated Fat:</li>
-            <li>Protein:</li>
-            <li>Sugar:</li>
-            <li>Sodium:</li>
-            <li>Fiber:</li>
-          </ul>
+        <div class="col-md-3">
+          <div id="overlay-two">
+            <h3 class="text-center"> Post-healthification! </h2>
+            <p class="text-center"> healthy stuff </p>
+            <ul>
+              <li>Ingredient 1</li>
+              <li>Ingredient 2</li>
+            </ul>
+            <h4 class="text-center">Nutritional Information </h4>
+            <ul>
+              <li>Carbohydrates:</li>
+              <li>Saturated Fat:</li>
+              <li>Unsaturated Fat:</li>
+              <li>Protein:</li>
+              <li>Sugar:</li>
+              <li>Sodium:</li>
+              <li>Fiber:</li>
+            </ul>
+          </div>
         </div>
       </div> 
     </div>
 
+</body>
 
     <div class="row" id="style2">
       <div class="col-md-5 col-md-offset-1 center">
@@ -92,7 +99,6 @@
       </div>
     </div>
 
-</body>
 
 </section>
 
