--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,5 +1,5 @@
 .content {
-  margin-top: 50px;
+  margin-top: 70px;
 }
 .undecorated-link:hover {
   text-decoration: none;
@@ -34,6 +34,33 @@ a:hover .header-profile-image {
 }
 .has-error .help-inline.error-text {
   display: inline;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+@media (min-width: 1400px) {
+  .container {
+    width: 1350px;
+  }
 }
 
 .row1style {
@@ -94,20 +121,27 @@ a:hover .header-profile-image {
   /*position: absolute;
   top: 40px; 
   left: 24%;*/
-  width: 52%;
+  width: 100%;
   height: 85%;
   background-color: #F4F7D9;
-  opacity: 0.85;
+  opacity: 0.9;
   border: 1px solid #fff;
-  border-radius: 25px;
+  border-radius: 10px;
 }
+#overlay-two {
+  /*position: absolute;
+  top: 40px; 
+  left: 24%;*/
+  opacity: 1;
+}
+
 
 #overlay-left {
   /*
   position: absolute;
   top: 60px; 
   left: 3%; */
-  width: 20%;
+  width: 100%;
   height: 80%;
   background-color: #F4F7D9;
   opacity: 0.85;
@@ -115,7 +149,7 @@ a:hover .header-profile-image {
   border-radius: 25px;
 }
 .topper {
-  padding-top: 25px;
+  margin-bottom: 10px; 
 }
 
 #overlay-right {
@@ -123,7 +157,7 @@ a:hover .header-profile-image {
   position: absolute;
   top: 60px; 
   left: 77%; */
-  width: 20%;
+  width: 100%;
   height: 80%;
   background-color: #F4F7D9;
   opacity: 0.85;
