--- a/modules/categories/client/views/create-categorie.client.view.html
+++ b/modules/categories/client/views/create-categorie.client.view.html
@@ -1,15 +1,15 @@
 <section ng-controller="CategoriesController">
   <div class="page-header">
-    <h1>New Categorie</h1>
+    <h1>New Category</h1>
   </div>
   <div class="col-md-12">
-    <form name="categorieForm" class="form-horizontal" ng-submit="create(categorieForm.$valid)" novalidate>
+    <form name="categoryForm" class="form-horizontal" ng-submit="create(categoryForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
           <label for="title">Title</label>
           <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="categorieForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Categorie title is required.</p>
+          <div ng-messages="categoryForm.title.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Category title is required.</p>
           </div>
         </div>
         <div class="form-group">
