--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,5 +1,5 @@
 .content {
-  margin-top: 70px;
+  margin-top: 60px;
 }
 .undecorated-link:hover {
   text-decoration: none;
@@ -39,8 +39,7 @@ a:hover .header-profile-image {
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0px;
 }
 @media (min-width: 768px) {
   .container {
@@ -57,13 +56,23 @@ a:hover .header-profile-image {
     width: 1170px;
   }
 }
-@media (min-width: 1400px) {
+@media (min-width: 1360px) {
   .container {
-    width: 1350px;
+    width: 100%;
   }
 }
 
-.row1style {
+.jumbotron {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.float-left {
+  float: left; 
+  
+}
+.float-right {
+  float: right; 
   
 }
 
@@ -102,12 +111,17 @@ a:hover .header-profile-image {
   font-size: 30px;
 }
 
-#veggies {
-  border:1px solid #fff;
-  border-radius: 10px;
+#banner {
+  height: 200px;
   width: 100%;
-  height: 550px;
-  position: relative;
+  background-color: #F4F7D9;
+}
+
+#food {
+  border:1px solid #fff;
+  border-radius: 100px;
+  width: 35%;
+  height: 35%;
 }
 
 
@@ -121,17 +135,25 @@ a:hover .header-profile-image {
   /*position: absolute;
   top: 40px; 
   left: 24%;*/
-  width: 100%;
+  margin-right: auto;
+  margin-left: auto; 
+  width: 90%;
   height: 85%;
   background-color: #F4F7D9;
   opacity: 0.9;
   border: 1px solid #fff;
   border-radius: 10px;
+  margin-top: 10px; 
 }
 #overlay-two {
   /*position: absolute;
   top: 40px; 
   left: 24%;*/
+
+  opacity: 0.9;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  background-color: #F4F7D9;
   opacity: 1;
 }
 
@@ -259,3 +281,8 @@ a:hover .header-profile-image {
   margin-left: 10px;
 }
 
+.table-scrolling {
+  max-height: 400px;
+  overflow: auto;
+  margin: 15px; 
+}
