--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -7,57 +7,42 @@
 
 
 <body>
-  
+
     <div class="row topper" id="overlay">
-      <div class="">
         <!--<img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>-->
         <div class="col-md-3">
-          <div id="overlay-two">
-            <h3 class="text-center"> Pre-healthification... </h2>
-            <p class="text-center"> Unhealthy ingredients: </p>
-            <ul>
-              <li>Ingredient 1</li>
-              <li>Ingredient 2</li>
-            </ul>
-            <h4 class="text-center">Nutritional Information </h4>
-            <ul>
-              <li>Carbohydrates:</li>
-              <li>Saturated Fat:</li>
-              <li>Unsaturated Fat:</li>
-              <li>Protein:</li>
-              <li>Sugar:</li>
-              <li>Sodium:</li>
-              <li>Fiber:</li>
-            </ul>
+          <img id="food" src="modules/core/client/img/brand/ccb.png"/>
+        </div>
+
+        <div id="">
+          <div class="text-center col-md-6">
+            <div>
+              <h2> Recipe of the Day! </h2>
+              <p>Populate with image and description of the recipe.</p>
+            </div>
+          </div>
+          <div class="col-md-3">
+              <h3 class="text-center"> Post-healthification! </h3>
+              <p class="text-center"> healthy stuff </p>
+              <ul>
+                <li>Ingredient 1</li>
+                <li>Ingredient 2</li>
+              </ul>
+              <h4 class="text-center">Nutritional Information </h4>
+              <ul>
+                <li>Carbohydrates:</li>
+                <li>Saturated Fat:</li>
+                <li>Unsaturated Fat:</li>
+                <li>Protein:</li>
+                <li>Sugar:</li>
+                <li>Sodium:</li>
+                <li>Fiber:</li>
+              </ul>
           </div>
         </div>
-        <div class="text-center col-md-6">
-          <div id="overlay-two">
-            <h2> Recipe of the Day! </h2>
-            <p>Populate with image and description of the recipe.</p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div id="overlay-two">
-            <h3 class="text-center"> Post-healthification! </h2>
-            <p class="text-center"> healthy stuff </p>
-            <ul>
-              <li>Ingredient 1</li>
-              <li>Ingredient 2</li>
-            </ul>
-            <h4 class="text-center">Nutritional Information </h4>
-            <ul>
-              <li>Carbohydrates:</li>
-              <li>Saturated Fat:</li>
-              <li>Unsaturated Fat:</li>
-              <li>Protein:</li>
-              <li>Sugar:</li>
-              <li>Sodium:</li>
-              <li>Fiber:</li>
-            </ul>
-          </div>
-        </div>
-      </div> 
+    </div> 
+
+    <div class="row" id="banner">
     </div>
 
 </body>
@@ -67,7 +52,7 @@
         <h2 class="text-center"> Browse Recipes </h2>
         <div class="table-scrolling">
           <table class="table table-striped table-hover" id="table-border">
-            <tr ng-repeat="recipe in recipes" ng-click='showDetails($index)' ui-sref="recipes.view({recipeId: recipe._id})">
+            <tr ng-repeat="recipe in recipes" ng-click='showDetails($index)'> <!--ui-sref="recipes.view({recipeId: recipe._id}) -->
               <td>Posted on
               <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
               <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
