adding backend to healthification
connected the state params so healthify button works.  Also added
functionality to delete ingredients as they’re added.

--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -109,7 +109,7 @@
             <input  readonly name="item" placeholder="ingredient" class="form-control" ng-model="ingredient.food_item.name" type="text">
           </div>
           <span class="input-group-btn">
-              <button type="button" class="btn btn-secondary">
+              <button type="button" class="btn btn-secondary" ng-click="deleteIngredientLine(ingredient)">
                 <span class="glyphicon glyphicon-minus"></span>
               </button>
             </span>
