--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -1,24 +1,47 @@
 <section ng-controller="RecipesController" ng-init="findOne()">
   <div class="page-header">
-    <h1>Healthify Recipes</h1>
+    <h1>Recipe Healthification</h1>
   </div>
-  <div class="col-md-12">
-    <form name="recipeForm" class="form-horizontal" ng-submit="update(recipeForm.$valid)" novalidate>
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="title">Title</label>
-          <input name="title" type="text" ng-model="recipe.title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="recipeForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Recipes title is required.</p>
-          </div>
+  
+  <div class="row">
+    <div class="col-md-5">
+      <h3>Original Ingredients</h3>
+        
+      <!-- ng repeat by the amount of ingredients -->
+      <!-- this is for each of these columns -->
+        
+        
+    </div>
+    <div class="col-md-2">
+      <h3>Parameters</h3>
+        <div class="form-group">
+          <select class="form-control" name="nutrients" ng-model="options.nutrients">
+          <!-- this right hurr is a drop down box with the nutrient names -->
+          </select>
         </div>
         <div class="form-group">
-          <input type="submit" value="Update" class="btn btn-default">
+          <input name="minimize" id="minimize" type="checkbox" checked="checked">
+          <!-- this checkbox determines whether we're finding alt ingredients that are greater/less than the current nutrient val -->
+          Minimize
+          </input>
         </div>
-        <div ng-show="error" class="text-danger">
-          <strong ng-bind="error"></strong>
-        </div>
-      </fieldset>
-    </form>
+    </div>
+    <div class="col-md-5">
+      <h3>Alternative Ingredients</h3>
+    
+    
+    
+    
+      <!-- display the health ingredients -->
+    
+    
+    </div>
+  </div>
+  <div class="row">
+    <h3>Healthification Statistics</h3>
+      <table id="stats_table">
+      
+      
+      </table>
   </div>
 </section>
