--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,20 +8,20 @@
 
 <body>
 
-    <div class="row topper" id="overlay">
+    <div>
         <!--<img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>-->
-        <div class="col-md-3">
+        <div class="float-left">
           <img id="food" src="modules/core/client/img/brand/ccb.png"/>
         </div>
 
-        <div id="">
-          <div class="text-center col-md-6">
+        <div class="z-index-2" id="overlay">
+          <div class="text-center">
             <div>
               <h2> Recipe of the Day! </h2>
               <p>Populate with image and description of the recipe.</p>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="">
               <h3 class="text-center"> Post-healthification! </h3>
               <p class="text-center"> healthy stuff </p>
               <ul>
@@ -87,7 +87,7 @@
 
 </section>
 
-<footer class="modal-footer modal-footer-center" id="style">
+<footer class="modal-footer modal-footer-center" id="footerstyle">
   <a ui-sref="contact" class="footer">Contact Us</a>
   <a ui-sref="about" class="footer">About</a>
   <a ui-sref="mission" class="footer">Our Mission</a>
