--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <div>
+    <div class="top">
         <!--<img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>-->
         <div class="float-left">
           <img id="food" src="modules/core/client/img/brand/ccb.png"/>
