--- a/modules/categories/client/views/create-categorie.client.view.html
+++ b/modules/categories/client/views/create-categorie.client.view.html
@@ -6,15 +6,18 @@
     <form name="categoryForm" class="form-horizontal" ng-submit="create(categoryForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label for="title">Title</label>
-          <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
+          <label for="name">Name</label>
+          <input name="name" type="text" ng-model="name" id="name" class="form-control" placeholder="Name" required>
           <div ng-messages="categoryForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Category title is required.</p>
+            <p class="help-block error-text" ng-message="required">Category Name is required.</p>
           </div>
         </div>
         <div class="form-group">
-          <label for="content">Content</label>
-          <textarea name="content" ng-model="content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+          <label for="tag">Tag</label>
+          <input name="tag" type="text" ng-model="tag" id="tag" class="form-control" placeholder="Tag" required>
+          <!--<div ng-messages="categoryForm.title.$error" role="alert">-->
+            <!--<p class="help-block error-text" ng-message="required">Category Tag is required.</p>-->
+          <!--</div>-->
         </div>
         <div class="form-group">
           <input type="submit" class="btn btn-default">
