--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -91,7 +91,8 @@
       </div>
       <div class="modal-footer">
         <span>Your Ingredient Is: {{confirmed.name}}</span>
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="addIngredientLine()">Okay!</button>
+        <button ng-hide="apiError" type="button" class="btn btn-default" data-dismiss="modal" ng-click="addIngredientLine()">Okay!</button>
+        <button ng-show="apiError" type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearResults()">Okay...</button>
       </div>
     </div>
 
