--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -79,11 +79,13 @@
         <h4 class="modal-title">Select Your Intended Ingredient</h4>
       </div>
       <div class="modal-body">
-       <table ng-hide="apiError" ng-show="assestsLoaded" class="table table-striped table-hover">
-        <tr  style="cursor: pointer;" ng-repeat="option in usdaList.item" ng-click="confirmIngredient($index);">
-          <td>{{option.name}}</td>
-        </tr>
-      </table>
+        <div class="table-scrolling">
+         <table ng-hide="apiError" ng-show="assestsLoaded" class="table table-striped table-hover">
+            <tr  style="cursor: pointer;" ng-repeat="option in usdaList.item" ng-click="confirmIngredient($index);">
+              <td>{{option.name}}</td>
+            </tr>
+          </table>
+        </div>
       <span ng-show="apiError">There was an error finding your ingredient! You can keep this ingredient or try to find another</span>
       <center>
         <img src="./modules/core/client/img/loaders/Preloader_4.gif" align="middle" ng-hide="assestsLoaded">
