--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -83,7 +83,7 @@ a:hover .header-profile-image {
 }
 
 #style2 {
-  background-color: #F4F7D9;
+  /*background-color: #F4F7D9;*/
   z-index: -2;
 }
 
@@ -124,7 +124,8 @@ a {
 }
 
 #banner {
-  height: 200px;
+  margin-bottom:3%;
+  height: 225px;
   width: 100%;
   position: absolute;
   top: 67.5%;
@@ -334,4 +335,58 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
   max-height: 400px;
   overflow: auto;
   margin: 15px; 
+}
+
+#homecat {
+  background-color: #F4F7D9;
+  border: 1px solid #F4F7D9;
+  border-radius: 10px;
+  margin-right: 2%;
+  margin-left: 2%;
+  margin-bottom: 2%;
+}
+
+#cat1 {
+  height: 90%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; 
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+#cat2 {
+  height: 90%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; 
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+#cat3 {
+  height: 90%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; 
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+#cattitle {
+  margin-top: 4%;
+  margin-bottom: ;
+}
+
+h1 span {
+  color: #F4F7D9; 
+  font: bold 52px/75px Helvetica, Sans-Serif; 
+  letter-spacing: -1px;  
+  background: rgb(25, 23, 24); /* fallback color */
+  background: rgba(25, 23, 24, 0.85);
+  padding: 10px; 
+
+  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
+  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
+  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
 }
