--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -47,12 +47,13 @@
 
 </body>
 
+    <!--
     <div class="row" id="style2">
       <div class="col-md-5 col-md-offset-1 center">
         <h2 class="text-center"> Browse Recipes </h2>
         <div class="table-scrolling">
-          <table class="table table-striped table-hover" id="table-border">
-            <tr ng-repeat="recipe in recipes" ng-click='showDetails($index)'> <!--ui-sref="recipes.view({recipeId: recipe._id}) -->
+          <table class="table table-striped table-hover" id="table-border"> 
+            <tr ng-repeat="recipe in recipes" ng-click='showDetails($index)'> <!--ui-sref="recipes.view({recipeId: recipe._id}) --> <!--
               <td>Posted on
               <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
               <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
@@ -66,23 +67,77 @@
         </div>
       </div>
       <div class="jumbotron col-md-4 col-md-offset-1">
-            <h3>Select a Recipe for more details</h3>
-             <br />
-             <p id="details"><strong>Title:</strong> <br />
-              <span>{{detailedInfo.title}}</span> <br />
-              <strong>Servings:</strong> <br />
-              <span>{{detailedInfo.servings}}</span> <br />
-              <strong>Cook Time:</strong> <br />
-              <span>{{detailedInfo.cook_time}}</span> <br />
+        <h3>Select a Recipe for more details</h3>
+         <br />
+         <p id="details"><strong>Title:</strong> <br />
+          <span>{{detailedInfo.title}}</span> <br />
+          <strong>Servings:</strong> <br />
+          <span>{{detailedInfo.servings}}</span> <br />
+          <strong>Cook Time:</strong> <br />
+          <span>{{detailedInfo.cook_time}}</span> <br />
 
-              <strong>Ingredients:</strong><br /> 
-              <span ng-repeat="ingredient in detailedInfo.original_ingredients">"{{ingredient.quantity}}  {{ingredient.unit}} {{ingredient.item}}" </span> <br>
-              <span ng-repeat="ingredient in detailedInfo.healthy_ing">"{{ingredient.quantity}}  {{ingredient.unit}} {{ingredient.item}}" </span> <br>
-              <strong>Directions: </strong> <br>
-              <span>{{detailedInfo.directions}} {{detailedInfo.instructions}}</span>
-             </p>
+          <strong>Ingredients:</strong><br /> 
+          <span ng-repeat="ingredient in detailedInfo.original_ingredients">"{{ingredient.quantity}}  {{ingredient.unit}} {{ingredient.item}}" </span> <br>
+          <span ng-repeat="ingredient in detailedInfo.healthy_ing">"{{ingredient.quantity}}  {{ingredient.unit}} {{ingredient.item}}" </span> <br>
+          <strong>Directions: </strong> <br>
+          <span>{{detailedInfo.directions}} {{detailedInfo.instructions}}</span>
+         </p>
       </div>
     </div>
+  -->
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 text-center" id="cattitle">
+      <h1><span>Browse by Category</span></h1> 
+    </div>
+  </div>
+  <div id="homecat">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="text-center">
+          <h3>Poultry</h3> 
+        </div>
+        <img class="center" id="cat1" src="modules/core/client/img/brand/ccb.png"/>
+      </div>
+
+      <div class="col-md-4">
+        <div class="text-center">
+          <h3>Poultry</h3> 
+        </div>
+        <img id="cat2" src="modules/core/client/img/brand/ccb.png"/>
+      </div>
+
+      <div class="col-md-4">
+        <div class="text-center">
+          <h3>Poultry</h3> 
+        </div>
+        <img id="cat3" src="modules/core/client/img/brand/ccb.png"/>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="text-center">
+          <h3>Poultry</h3> 
+        </div>
+        <img class="center" id="cat1" src="modules/core/client/img/brand/ccb.png"/>
+      </div>
+
+      <div class="col-md-4">
+        <div class="text-center">
+          <h3>Poultry</h3> 
+        </div>
+        <img id="cat2" src="modules/core/client/img/brand/ccb.png"/>
+      </div>
+
+      <div class="col-md-4">
+        <div class="text-center">
+          <h3>Poultry</h3> 
+        </div>
+        <img id="cat3" src="modules/core/client/img/brand/ccb.png"/>
+      </div>
+    </div>
+
+  </div>
 
 
 </section>
