--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -37,8 +37,9 @@ a:hover .header-profile-image {
 }
 
 .container {
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 0;
+  margin-left: 0;
+  padding: 0px;
 }
 @media (min-width: 768px) {
   .container {
@@ -56,6 +57,11 @@ a:hover .header-profile-image {
   }
 }
 @media (min-width: 1360px) {
+  .container {
+    width: 100%;
+  }
+}
+@media (min-width: 1400px) {
   .container {
     width: 100%;
   }
@@ -124,6 +130,8 @@ a {
 
 #banner {
   margin-bottom:3%;
+  margin-left: 0;
+  margin-right: 0;
   height: 225px;
   width: 100%;
   position: absolute;
@@ -141,6 +149,8 @@ a {
   left: 5%;
   border:1px;
   border-radius: 100px;
+  max-height: 400px;
+  max-width: 400px;
   width: 30%;
   height: 40%;
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
