--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,25 +18,19 @@
           <div class="text-center">
             <div>
               <h2> Recipe of the Day! </h2>
-              <p>Populate with image and description of the recipe.</p>
             </div>
           </div>
           <div class="">
-              <h3 class="text-center"> Post-healthification! </h3>
-              <p class="text-center"> healthy stuff </p>
-              <ul>
+              <h3> Recipe Title </h3>
+              <p> Serves: 2 </p>
+              <h4> Ingredients: </h4>
+              <ol>
                 <li>Ingredient 1</li>
                 <li>Ingredient 2</li>
-              </ul>
-              <h4 class="text-center">Nutritional Information </h4>
+              </ol>
+              <h4>Instructions </h4>
               <ul>
-                <li>Carbohydrates:</li>
-                <li>Saturated Fat:</li>
-                <li>Unsaturated Fat:</li>
-                <li>Protein:</li>
-                <li>Sugar:</li>
-                <li>Sodium:</li>
-                <li>Fiber:</li>
+                <li>Do the stufff with the things. </li>
               </ul>
           </div>
         </div>
@@ -92,47 +86,35 @@
   </div>
   <div id="homecat">
     <div class="row">
-      <div class="col-md-4">
-        <div class="text-center">
-          <h3>Poultry</h3> 
-        </div>
+      <div class="col-md-4 text-center">
+        <h3>Poultry</h3> 
         <img class="center" id="cat1" src="modules/core/client/img/brand/ccb.png"/>
       </div>
 
-      <div class="col-md-4">
-        <div class="text-center">
-          <h3>Poultry</h3> 
-        </div>
+      <div class="col-md-4 text-center">
+        <h3>Poultry</h3> 
         <img id="cat2" src="modules/core/client/img/brand/ccb.png"/>
       </div>
 
-      <div class="col-md-4">
-        <div class="text-center">
-          <h3>Poultry</h3> 
-        </div>
+      <div class="col-md-4 text-center">
+        <h3>Poultry</h3> 
         <img id="cat3" src="modules/core/client/img/brand/ccb.png"/>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-4">
-        <div class="text-center">
-          <h3>Poultry</h3> 
-        </div>
+      <div class="col-md-4 text-center">
+        <h3>Poultry</h3> 
         <img class="center" id="cat1" src="modules/core/client/img/brand/ccb.png"/>
       </div>
 
-      <div class="col-md-4">
-        <div class="text-center">
-          <h3>Poultry</h3> 
-        </div>
+      <div class="col-md-4 text-center">
+        <h3>Poultry</h3> 
         <img id="cat2" src="modules/core/client/img/brand/ccb.png"/>
       </div>
 
-      <div class="col-md-4">
-        <div class="text-center">
-          <h3>Poultry</h3> 
-        </div>
+      <div class="col-md-4 text-center">
+        <h3>Poultry</h3> 
         <img id="cat3" src="modules/core/client/img/brand/ccb.png"/>
       </div>
     </div>
