Revert "merge conflict fixes"
This reverts commit b9f6dfe906abc360f9d7a8df998806f104eee78e, reversing
changes made to 6903c2baf7a2716f81add8fcc3b3dd42b1dfb65e.

Undoing maddie's mistake

--- a/modules/recipes/client/views/view-recipe.client.view.html
+++ b/modules/recipes/client/views/view-recipe.client.view.html
@@ -23,7 +23,7 @@
         <i class="glyphicon glyphicon-trash"></i>
       </a>
       <a class="btn btn-info" ng-click="">
-        <i class="glyphicon glyphicon-heart" ui-sref="recipes.healthify({recipeId: recipe._id})"> Healthify</i>
+        <i class="glyphicon glyphicon-heart"> Healthify</i>
       </a>
     </div>
   </div>
